--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "hover.css": "^2.3.2",
     "node": "^17.7.2",
     "node-fetch": "^2.6.1",
     "node-sessionstorage": "^1.0.0",
