--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "./node_modules/.bin/netlify-lambda serve src",
+    "build": "./node_modules/.bin/netlify-lambda build src"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "16": "^0.0.2",
+    "@netlify/functions": "^2.6.0",
+    "@types/express": "^4.17.21",
     "axios": "^0.27.2",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
@@ -20,6 +23,7 @@
     "node-sessionstorage": "^1.0.0",
     "randomstring": "^1.2.2",
     "request": "^2.88.2",
+    "serverless-http": "^3.2.0",
     "store": "^2.0.12"
   }
 }
